# yuki

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  updata.md  vite.config.ts
.github/workflows/: ci.yml  release.yml
node_modules.bak/: .package-lock.json
src/: App.vue
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/composables/: useChat.ts  useConsole.ts  useLive2D.ts  useMotion.ts  useRecorder.ts  useTTS.ts  useTheme.ts
src/core/: AudioEncoder.ts  ConfigStore.ts  Database.ts  Live2DManager.ts  MotionAliasStore.ts  SkillManager.ts
src/views/: ChatView.vue  ConsoleView.vue  MainView.vue  SettingsView.vue
src/views/chat/: ChatInput.vue  McpPanel.vue  MessageBubble.vue  MessageList.vue  SessionSidebar.vue  SkillPanel.vue  ThemePanel.vue
src/views/main/: ActionPanelModal.vue  ChatOverlay.vue  ControlPanel.vue  ModelTuningModal.vue  SpeechBubble.vue
src/views/settings/: AiProviderSettings.vue  EmotionLinkSettings.vue  ModelSettings.vue  PersonaSettings.vue  ThemeSettings.vue  TtsSettings.vue
